--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "author": "Jeroen Ransijn",
   "license": "MIT",
+  "engines": {
+    "node": ">=5.4.1"
+  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
