--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,14 @@
 root = true
 
 [*]
-indent_style = tab
+indent_style = space
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.{json,cson,js,html,css,scss}]
-indent_style = tab
+indent_style = space
 indent_size = 2
 
 [.eslintrc]
