--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "engines": {
     "node": ">=5.4.1"
   },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jeroenransijn/expressful.git"
+  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
@@ -19,5 +24,19 @@
     "remarkable": "^1.6.2",
     "serve-favicon": "^2.3.0",
     "express-session": "^1.14.0"
-  }
+  },
+  "keywords": [
+    "api",
+    "app",
+    "easy",
+    "convention",
+    "convenience",
+    "express",
+    "expressful",
+    "framework",
+    "rest",
+    "restful",
+    "router",
+    "web"
+  ],
 }
