--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "cson": "^3.0.2",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
+    "express-session": "^1.14.0",
+    "expressful-content": "^0.1.1",
     "highlight.js": "^9.5.0",
     "marked": "^0.3.5",
     "morgan": "^1.7.0",
     "nunjucks": "^2.4.2",
     "remarkable": "^1.6.2",
-    "serve-favicon": "^2.3.0",
-    "express-session": "^1.14.0"
+    "serve-favicon": "^2.3.0"
   },
   "keywords": [
     "api",
@@ -42,8 +43,15 @@
     "router",
     "web"
   ],
+  "files": [
+    "LICENSE",
+    "README.md",
+    "index.js",
+    "lib/"
+  ],
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
   }
 }
