--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   ],
   "devDependencies": {
     "chai": "^3.5.0",
+    "cli-table": "^0.3.1",
     "mocha": "^2.5.3",
     "supertest": "^1.2.0"
   }
