--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressful",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "author": "Jeroen Ransijn",
   "license": "MIT",
   "engines": {
@@ -27,7 +27,8 @@
     "morgan": "^1.7.0",
     "nunjucks": "^2.4.2",
     "remarkable": "^1.6.2",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "cli-table": "^0.3.1",
   },
   "keywords": [
     "api",
@@ -51,7 +52,6 @@
   ],
   "devDependencies": {
     "chai": "^3.5.0",
-    "cli-table": "^0.3.1",
     "mocha": "^2.5.3",
     "supertest": "^1.2.0"
   }
