--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cli-table": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "cson": "^3.0.2",
     "errorhandler": "^1.4.3",
@@ -27,8 +28,7 @@
     "morgan": "^1.7.0",
     "nunjucks": "^2.4.2",
     "remarkable": "^1.6.2",
-    "serve-favicon": "^2.3.0",
-    "cli-table": "^0.3.1"
+    "serve-favicon": "^2.3.0"
   },
   "keywords": [
     "api",
