--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expressful",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "author": "Jeroen Ransijn",
   "license": "MIT",
   "engines": {
@@ -24,6 +24,7 @@
     "express-session": "^1.14.0",
     "expressful-content": "^0.1.1",
     "highlight.js": "^9.5.0",
+    "http-proxy": "^1.14.0",
     "marked": "^0.3.5",
     "morgan": "^1.7.0",
     "nunjucks": "^2.4.2",
